ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tv
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - tv.kvikshaug.no
    secretName: tv-tls
  rules:
  - host: tv.kvikshaug.no
    http:
      paths:
      - path: /
        backend:
          serviceName: tv
          servicePort: 80
